# vim-master

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  test_app.py  ПЛАН_РАЗРАБОТКИ.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: auth.py  main.py  schemas.py
app/api/endpoints/: auth.py  progress.py  quests.py
app/bot/: __init__.py
app/bot/handlers/: menu.py  quest.py  start.py
app/bot/keyboards/: __init__.py  main.py
app/config/: __init__.py  database.py  settings.py
app/core/services/: game.py  quest.py  user.py
app/db/: base.py  models.py
app/db/repositories/: base.py  progress.py  quest.py  user.py
app/tests/: __init__.py  conftest.py  test_bot_handlers.py  test_config.py  test_database.py  test_keyboards.py  test_main.py
app/tests/integration/: test_bot_handlers.py  test_database.py  test_main.py
app/tests/unit/: test_config.py  test_keyboards.py
docker/: Dockerfile.dev
docker/postgres/: init.sql
scripts/: seed_quests.py  test.sh
